--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = OpenIPMI
-url = https://sourceforge.net/projects/openipmi/files/OpenIPMI%202.0%20Library/OpenIPMI-2.0.26.tar.gz
+url = https://sourceforge.net/projects/openipmi/files/OpenIPMI%202.0%20Library/OpenIPMI-2.0.27.tar.gz
 archives = 
 giturl = 
 
@@ -12,7 +12,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
