--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = OpenIPMI
-url = https://sourceforge.net/projects/openipmi/files/OpenIPMI%202.0%20Library/OpenIPMI-2.0.31.tar.gz
+url = https://sourceforge.net/projects/openipmi/files/OpenIPMI%202.0%20Library/OpenIPMI-2.0.32.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = true
 # add .so files to the lib package instead of dev
